# LMSuitev0.92

./: CMakeLists.txt  Makefile  README  README.md  name_list_changes
Documentation/: COPYRIGHT  PERMISSION  UsersManual.tex
arch/: gfortran.sh
inputs/: circuit.in  dispersion.in  frequencies.in  lmsuite.nml  losses.in  movies.nml  scan_data.nml
make_files/: makefile_linux
src/: CMakeLists.txt  TWTmodules.f90  clean_ops_nix_gfortran.f90  clean_ops_nix_ifort.f90  clean_ops_win.f90  commonTWT.i90  initialize.f90  latte_dc_constant.f90  main.f90  make_frames.f90  makefile_linux  movie_data_class.f90  ode_functions.f90  parameters.f90  precision95.f90  process_inputs.f90  scan_data_class.f90  solveTWT.f90  working_variables.f90
src/mini_blas/: CMakeLists.txt  makefile_linux
src/mini_lapack/: CMakeLists.txt
src/mini_lapack/complex16/: CMakeLists.txt  makefile_linux
src/mini_lapack/util/: CMakeLists.txt  makefile_linux
src/mini_slatec/: CMakeLists.txt  i1mach.f  makefile_linux
